--- a/web/viewer.html
+++ b/web/viewer.html
@@ -33,10 +33,10 @@ See https://github.com/adobe-type-tools/cmap-resources
 
 <!-- This snippet is used in production (included from viewer.html) -->
 <link rel="resource" type="application/l10n" href="locale/locale.properties">
-<script src="../build/pdf.js"></script>
+<script src="../build/pdf.js" defer></script>
+<script src="viewer.js"defer></script>
 
 
-  <script src="viewer.js"></script>
 
   </head>
 
